igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.krowten.id
  tags = {
    Project = "krowten"
  }
}
